<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ouvidoria</string>
    <string name="action_settings">Configurações</string>
    <string name="title_welcome">Bem-vindo à Ouvidoria USP!</string>
    <string name="input_user">Usuário/NUSP</string>
    <string name="input_pass">Senha</string>
    <string name="action_login">Entrar como usuário</string>
    <string name="action_login_ouvidor">Entrar como ouvidor</string>
    <string name="action_exit">Sair</string>
    <string name="title_logado">Logado</string>
    <string name="text_success">SUCESSO!!</string>
    <string name="username">Nome do usuário</string>
    <string name="action_register">Nova ocorrência</string>
    <string name="picture">Tirar Foto</string>
    <string name="description_string">Descrição</string>
    <string name="location_string">Local</string>
    <string name="enviar">Enviar</string>
    <string name="gps">Adicionar local via GPS</string>
    <string name="list_new">Listar novos incidentes</string>
    <string name="page_before">&lt;</string>
    <string name="page_next">></string>
    <string name="clean_cache">Recarregar</string>
    <string name="loading">Carregando</string>
    <string name="map">Mostrar mapa</string>
    <string name="aberto">Aberto</string>
    <string name="andamento">Em andamento</string>
    <string name="oculto">Oculto</string>
    <string name="resolvido">Resolvido</string>
    <string name="listopen">Listar abertos</string>
    <string name="listsolving">Listar em andamento</string>
    <string name="listoculto">Listar ocultos</string>
    <string name="listsolved">Listar resolvidos</string>
    <string name="searchlocal">Buscar por local</string>
    <string name="searchdescricao">Buscar por descrição</string>
    <string name="digitelocal">Digite o nome do local:</string>
    <string name="digitedescricao">Digite termo(s) da descrição:</string>
    <string name="submit">Listar</string>
    
</resources>
