<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/scroll" 
      android:layout_width="fill_parent"
      android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff" 
    android:gravity="center_vertical|center_horizontal|center"
    android:orientation="vertical">

      <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <Button
        android:id="@+id/listnew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_new" />
    
     <Button
        android:id="@+id/showmap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map" />
     
     <Button
        android:id="@+id/listopen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listopen" />
     
     <Button
        android:id="@+id/listsolving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listsolving" />
     
     <Button
        android:id="@+id/listoculto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listoculto" />
     
     <Button
        android:id="@+id/listsolved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listsolved" />
     
     <Button
        android:id="@+id/searchlocal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchlocal" />
    

</LinearLayout>

</ScrollView>
